--- a/MySoap/MySoap/Views/Test_Item.xaml
+++ b/MySoap/MySoap/Views/Test_Item.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MySoap.Views.Test_Item">
+             x:Class="MySoapDB.Views.Test_Item">
     <ContentPage.Content>
         <StackLayout>
             <Button x:Name="btnQuery" Text="조회"/>
